# vexnuvem-agent

./: .gitignore  README.md  VexNuvem Agent.spec  main.py  pyproject.toml  requirements.txt
.github/: release-notes.md
.github/workflows/: release.yml
installer/: VexNuvem Agent.iss
scripts/: build.bat  build_exe.ps1  build_installer.ps1  build_logic.ps1  generate_branding_assets.py  generate_build_metadata.py  release.bat  release_logic.ps1
src/vexnuvem_agent/: __init__.py  api_client.py  backup_service.py  config.py  ftp_service.py  logging_utils.py  main.py  models.py  paths.py  protection_service.py  scheduler_service.py  security.py  startup_service.py  storage.py  system_info.py  update_service.py  update_state.py
src/vexnuvem_agent/ui/: auth_dialog.py  main_window.py  theme.py
